youfull/objects/Sales_Org_Leadership__c.object
<CustomObject>
    <fields>
        <fullName>TITL_2_UPLN_CNT__c</fullName>
        <label>TITL_2_UPLN_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_WO_PATD_CNT__c</fullName>
        <label>TITL_2_WO_PATD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_WO_TOP_SLR_TITL_CNT__c</fullName>
        <label>TITL_2_WO_TOP_SLR_TITL_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_3_ABV_MIN_CNT__c</fullName>
        <label>TITL_3_ABV_MIN_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_3_ACTVTY_PCT__c</fullName>
        <label>TITL_3_ACTVTY_PCT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_3_ANNIV_CNT__c</fullName>
        <label>TITL_3_ANNIV_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_3_APPT_CNT__c</fullName>
        <label>TITL_3_APPT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_3_AVG_ORD_AMT__c</fullName>
        <label>TITL_3_AVG_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_3_AWRD_SLS_AMT__c</fullName>
        <label>TITL_3_AWRD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_3_BAD_DEBT_AMT__c</fullName>
        <label>TITL_3_BAD_DEBT_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_3_BAL_DUE_AMT__c</fullName>
        <label>TITL_3_BAL_DUE_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_3_BRTHDY_CNT__c</fullName>
        <label>TITL_3_BRTHDY_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_3_FRST_ORD_CNT__c</fullName>
        <label>TITL_3_FRST_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_3_GRP_ABV_QLFR_CNT__c</fullName>
        <label>TITL_3_GRP_ABV_QLFR_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_3_GRP_PD_SLS_AMT__c</fullName>
        <label>TITL_3_GRP_PD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_3_HOLD_ORD_CNT__c</fullName>
        <label>TITL_3_HOLD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_3_MULT_ORD_CNT__c</fullName>
        <label>TITL_3_MULT_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_3_NET_SLS_AMT__c</fullName>
        <label>TITL_3_NET_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_3_NO_ORD_CNT__c</fullName>
        <label>TITL_3_NO_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_3_ORD_AVG_CUST_CNT__c</fullName>
        <label>TITL_3_ORD_AVG_CUST_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_3_ORD_CNT__c</fullName>
        <label>TITL_3_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_3_PAST_DUE_AMT__c</fullName>
        <label>TITL_3_PAST_DUE_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_3_PATD_CNT__c</fullName>
        <label>TITL_3_PATD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_3_PEND_ORD_CNT__c</fullName>
        <label>TITL_3_PEND_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_3_PRSNL_ORD_UND_MIN_CNT__c</fullName>
        <label>TITL_3_PRSNL_ORD_UND_MIN_CNT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_3_PTNTL_ERNGS_AMT__c</fullName>
        <label>TITL_3_PTNTL_ERNGS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_3_RMOVL_CNT__c</fullName>
        <label>TITL_3_RMOVL_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_3_RNSTMT_CNT__c</fullName>
        <label>TITL_3_RNSTMT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_3_RTURN_AMT__c</fullName>
        <label>TITL_3_RTURN_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_3_STF_CHNG_PCT__c</fullName>
        <label>TITL_3_STF_CHNG_PCT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_3_STF_CNT__c</fullName>
        <label>TITL_3_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_3_TITL_DMTD_CNT__c</fullName>
        <label>TITL_3_TITL_DMTD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_3_TITL_PROMTD_CNT__c</fullName>
        <label>TITL_3_TITL_PROMTD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_3_TOP_SLR_CNT__c</fullName>
        <label>TITL_3_TOP_SLR_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_3_UND_MIN_CNT__c</fullName>
        <label>TITL_3_UND_MIN_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_3_UPLN_CNT__c</fullName>
        <label>TITL_3_UPLN_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_3_WO_PATD_CNT__c</fullName>
        <label>TITL_3_WO_PATD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_3_WO_TOP_SLR_TITL_CNT__c</fullName>
        <label>TITL_3_WO_TOP_SLR_TITL_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOTAL_REP_NO_ACTVTY_CNT__c</fullName>
        <formula>Sales_Org_Ldrship_MktTags__r.TITL_1_REP_NO_ACTVTY_CNT__c+Sales_Org_Ldrship_MktTags__r.TITL_2_REP_NO_ACTVTY_CNT__c+Sales_Org_Ldrship_MktTags__r.TITL_3_REP_NO_ACTVTY_CNT__c+Sales_Org_Ldrship_MktTags__r.TITL_4_REP_NO_ACTVTY_CNT__c+Sales_Org_Ldrship_MktTags__r.TITL_5_REP_NO_ACTVTY_CNT__c+Sales_Org_Ldrship_MktTags__r.UQ_TITL_1_REP_NO_ACTVTY_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TOTAL_REP_NO_ACTVTY_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOTAL_STAFF_CHNG_PCT__c</fullName>
        <formula>(IN_ZONE_UQ_TITL_1_STF_CNT__c + OUT_ZONE_UQ_TITL_1_STF_CNT__c + IN_ZONE_TITL_1_STF_CNT__c + OUT_ZONE_TITL_1_STF_CNT__c + IN_ZONE_TITL_2_STF_CNT__c + OUT_ZONE_TITL_2_STF_CNT__c + IN_ZONE_TITL_3_STF_CNT__c + OUT_ZONE_TITL_3_STF_CNT__c + IN_ZONE_TITL_4_STF_CNT__c +
OUT_ZONE_TITL_4_STF_CNT__c + IN_ZONE_TITL_5_STF_CNT__c + OUT_ZONE_TITL_5_STF_CNT__c ) /   (PC_IN_ZONE_LDRSHP_STF_CNT__c +  PC_LDRSHP_OUT_ZONE_STF_CNT__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TOTAL_STAFF_CHNG_PCT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_ABV_MIN_CNT__c</fullName>
        <label>UQ_TITL_1_ABV_MIN_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_ACTVTY_PCT__c</fullName>
        <label>UQ_TITL_1_ACTVTY_PCT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_ANNIV_CNT__c</fullName>
        <label>UQ_TITL_1_ANNIV_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_APPT_CNT__c</fullName>
        <label>UQ_TITL_1_APPT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_AVG_ORD_AMT__c</fullName>
        <label>UQ_TITL_1_AVG_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_AWRD_SLS_AMT__c</fullName>
        <label>UQ_TITL_1_AWRD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_BAD_DEBT_AMT__c</fullName>
        <label>UQ_TITL_1_BAD_DEBT_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_BAL_DUE_AMT__c</fullName>
        <label>UQ_TITL_1_BAL_DUE_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_BRTHDY_CNT__c</fullName>
        <label>UQ_TITL_1_BRTHDY_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_FRST_ORD_CNT__c</fullName>
        <label>UQ_TITL_1_FRST_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_GRP_ABV_QLFR_CNT__c</fullName>
        <label>UQ_TITL_1_GRP_ABV_QLFR_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_GRP_PD_SLS_AMT__c</fullName>
        <label>UQ_TITL_1_GRP_PD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_HOLD_ORD_CNT__c</fullName>
        <label>UQ_TITL_1_HOLD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_MULT_ORD_CNT__c</fullName>
        <label>UQ_TITL_1_MULT_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_NET_SLS_AMT__c</fullName>
        <label>UQ_TITL_1_NET_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_NO_ORD_CNT__c</fullName>
        <label>UQ_TITL_1_NO_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_ORD_AVG_CUST_CNT__c</fullName>
        <label>UQ_TITL_1_ORD_AVG_CUST_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_ORD_CNT__c</fullName>
        <label>UQ_TITL_1_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_PAST_DUE_AMT__c</fullName>
        <label>UQ_TITL_1_PAST_DUE_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_PATD_CNT__c</fullName>
        <label>UQ_TITL_1_PATD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_PEND_ORD_CNT__c</fullName>
        <label>UQ_TITL_1_PEND_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_PRSNL_ORD_UND_MIN_CN__c</fullName>
        <label>UQ_TITL_1_PRSNL_ORD_UND_MIN_CN</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_PTNTL_ERNGS_AMT__c</fullName>
        <label>UQ_TITL_1_PTNTL_ERNGS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_RMOVL_CNT__c</fullName>
        <label>UQ_TITL_1_RMOVL_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_RNSTMT_CNT__c</fullName>
        <label>UQ_TITL_1_RNSTMT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_RTURN_AMT__c</fullName>
        <label>UQ_TITL_1_RTURN_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_STF_CHNG_PCT__c</fullName>
        <label>UQ_TITL_1_STF_CHNG_PCT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_STF_CNT__c</fullName>
        <label>UQ_TITL_1_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_TITL_DMTD_CNT__c</fullName>
        <label>UQ_TITL_1_TITL_DMTD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_TITL_PROMTD_CNT__c</fullName>
        <label>UQ_TITL_1_TITL_PROMTD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_TOP_SLR_CNT__c</fullName>
        <label>UQ_TITL_1_TOP_SLR_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_UND_MIN_CNT__c</fullName>
        <label>UQ_TITL_1_UND_MIN_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_UPLN_CNT__c</fullName>
        <label>UQ_TITL_1_UPLN_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_WO_PATD_CNT__c</fullName>
        <label>UQ_TITL_1_WO_PATD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_WO_TOP_SLR_TITL_CNT__c</fullName>
        <label>UQ_TITL_1_WO_TOP_SLR_TITL_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZONE_MGR_APPT_CNT__c</fullName>
        <label>ZONE_MGR_APPT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZONE_MGR_RMOVL_CNT__c</fullName>
        <label>ZONE_MGR_RMOVL_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZONE_MGR_RNSTMT_CNT__c</fullName>
        <label>ZONE_MGR_RNSTMT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZONE_MGR_STF_CHNG_PCT__c</fullName>
        <label>ZONE_MGR_STF_CHNG_PCT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ZONE_MGR_STF_CNT__c</fullName>
        <label>ZONE_MGR_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Market Analysis (DO NOT USE)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MRKT_ID_ZONE_CD_KEY__c</columns>
        <columns>MRKT_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CZ_Zone_Ldrshp</fullName>
        <columns>MRKT_ID_ZONE_CD_KEY__c</columns>
        <columns>IN_ZONE_DWNLN_NON_LDR_STF_CNT__c</columns>
        <columns>IN_ZONE_TITL_1_STF_CNT__c</columns>
        <columns>IN_ZONE_TITL_2_STF_CNT__c</columns>
        <columns>IN_ZONE_TITL_3_STF_CNT__c</columns>
        <columns>IN_ZONE_TITL_4_STF_CNT__c</columns>
        <columns>IN_ZONE_TITL_5_STF_CNT__c</columns>
        <columns>IN_ZONE_UQ_TITL_1_STF_CNT__c</columns>
        <columns>OUT_ZONE_DWNLN_NON_LDR_STF_CNT__c</columns>
        <columns>OUT_ZONE_TITL_1_STF_CNT__c</columns>
        <columns>OUT_ZONE_TITL_2_STF_CNT__c</columns>
        <columns>OUT_ZONE_TITL_3_STF_CNT__c</columns>
        <columns>OUT_ZONE_TITL_4_STF_CNT__c</columns>
        <columns>OUT_ZONE_TITL_5_STF_CNT__c</columns>
        <columns>OUT_ZONE_UQ_TITL_1_STF_CNT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MRKT_ID__c</field>
            <operation>equals</operation>
            <value>38</value>
        </filters>
        <label>CZ_Zone_Ldrshp</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>HU_Zone_Leadership</fullName>
        <columns>MRKT_ID_ZONE_CD_KEY__c</columns>
        <columns>NAME</columns>
        <columns>MRKT_ID__c</columns>
        <columns>TITL_5_STF_CNT__c</columns>
        <columns>TITL_4_STF_CNT__c</columns>
        <columns>TITL_3_STF_CNT__c</columns>
        <columns>TITL_2_STF_CNT__c</columns>
        <columns>TITL_1_STF_CNT__c</columns>
        <columns>UQ_TITL_1_STF_CNT__c</columns>
        <columns>NON_LDRSHP_STF_CNT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MRKT_ID__c</field>
            <operation>equals</operation>
            <value>47</value>
        </filters>
        <label>HU_Zone_Leadership</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>RU_Zone_Ldrshp</fullName>
        <columns>NAME</columns>
        <columns>SLS_ORG_CD__c</columns>
        <columns>NON_LDRSHP_RTURN_AMT__c</columns>
        <columns>SLS_ORG_LVL_NR__c</columns>
        <columns>SLS_ORG_NM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MRKT_ID_ZONE_CD_KEY__c</field>
            <operation>startsWith</operation>
            <value>67</value>
        </filters>
        <label>RU_Zone_Ldrshp</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Romania_Sales_orgs</fullName>
        <columns>NAME</columns>
        <columns>MRKT_ID__c</columns>
        <columns>MRKT_ID_ZONE_CD_KEY__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MRKT_ID__c</field>
            <operation>equals</operation>
            <value>66</value>
        </filters>
        <label>Romania Sales orgs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Russia_Sales_Org_Leadership</fullName>
        <columns>NAME</columns>
        <columns>MRKT_ID_ZONE_CD_KEY__c</columns>
        <columns>OPERTNL_CMPGN_NR__c</columns>
        <columns>SLS_ORG_CD__c</columns>
        <columns>SLS_ORG_LVL_NR__c</columns>
        <columns>SLS_ORG_NM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MRKT_ID__c</field>
            <operation>equals</operation>
            <value>67</value>
        </filters>
        <label>Russia Sales Org Leadership</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SOL-{00000000}</displayFormat>
        <label>Sales Org Leadership Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Org Leaderships</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>